--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,7 @@
-BOT_TOKEN=12345678:TeleGRam_bOt_token
-ADMINS=21402193401,21310,501290
+BOT_TOKEN=7639548266:AAFqXb34-nk9-a6u30yc5ZDsvD3sJesjv5k
+ADMINS=185183115
 API_URL=http://aviboo.ru
-TELEGRAM_CHANNEL=https://t.me/abc
+TELEGRAM_CHANNEL=https://t.me/aviboom
 SUPPORT_TELEGRAM_URL=https://t.me/abc
 
 DB_USER=postgres
